--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,23 @@
 extends layout
 
+block title
+    title RaspiDynomics
+block headjscss
+    link(rel='stylesheet', href='/javascripts/lib/bootstrap/3.3.7/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/app/index.css')
+
 block content
-  h1= title
-  p Hello world #{title}
+    div#mainPnl
+        div#controlPnl(class='control-pnl')
+            div#controlLeft(class='control-left')
+            div#controlRight(class='control-right')
+                div#divUp(class='div-ctl div-up') ↑
+                div#divLeft(class='div-ctl div-left') ←
+                div#divRight(class='div-ctl div-right') →
+                div#divDown(class='div-ctl div-down') ↓
+
+
+        img#imgStream(class='img-stream' src='http://10.1.2.222:8081/?action=stream')
+
+    script(type='text/javascript' src='/javascripts/app/index.js')
+
