--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,12 @@
 doctype html
 html
   head
-    title= title
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible' content='IE=edge')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no')
+    block title
+    script(type='text/javascript' src='/javascripts/lib/jquery/3.1.1/jquery.min.js')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    block headjscss
   body
     block content
