--- a/public/stylesheets/app/index.css
+++ b/public/stylesheets/app/index.css
@@ -1,3 +1,12 @@
+* {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 body {
     background-color: lightgray;
     position: relative;
@@ -37,7 +46,7 @@ body {
     position: absolute;
     text-align: center;
     line-height: 60px;
-    font-size: 32px;
+    font-size: 36px;
     font-weight: bolder;
     background-color: lightgray;
     opacity: 0.4;
